pulumi/projects/k8s/clusters/dreadnought/manifests/istio-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: my-ca-issuer
    metallb.io/loadBalancerIPs: 192.168.50.254
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "homelab.internal"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "homelab.internal"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: homelab-internal-tls
    - name: jellyfin-https
      protocol: HTTPS
      port: 443
      hostname: "jellyfin.internal"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: homelab-internal-tls
